--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,6 @@
 @import 'layout/header';
 @import 'layout/__articles.scss';
 @import 'layout/__gallery.scss';
-// @import 'layout/nav';
-// @import 'layout/footer.scss';
 
-// @import 'layout/__menu.scss';
-// @import 'layout/vignettes.scss';
+@import 'layout/__gallery__modals.scss';
 @import 'utils/boutons.scss';
