--- a/sass/utils/keyframes.scss
+++ b/sass/utils/keyframes.scss
@@ -1,10 +1,27 @@
-@keyframes apparition {
+@keyframes link-apparition {
 	0% {
-		opacity: 0;
+		//	opacity: 0;
 		transform: scaleY(0);
 	}
 	100% {
-		opacity: 1;
+		//opacity: 1;
 		transform: scaleY(1);
 	}
-} ;
+}
+
+@keyframes contact-modal-background-opacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0.8;
+	}
+}
+@keyframes lightbox-modal-background-opacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
