--- a/sass/layout/___articles.scss
+++ b/sass/layout/___articles.scss
@@ -4,7 +4,7 @@
 	margin: $marginH 0 0 0;
 	padding: 0;
 	font-size: 0.8rem;
-	z-index: 0;
+	//z-index: 0;
 
 	&__link {
 		display: flex;
@@ -44,7 +44,7 @@
 
 			&__tags {
 				margin: 0;
-				z-index: 2;
+				//	z-index: 2;
 			}
 		}
 	}
