--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
 	&__linkContainer {
+		position: relative;
 		display: flex;
 		justify-content: center;
 
@@ -14,10 +15,10 @@
 			vertical-align: middle;
 			line-height: 30px;
 			margin-top: $marginV * 0.2;
-			opacity: 0.2;
+			//opacity: 0;
 			transform: scaleY(1);
 			transform-origin: 0% -100%;
-			animation: apparition 0.6s forwards;
+			animation: link-apparition 0.6s forwards;
 		}
 	}
 
