--- a/sass/layout/__gallery__modals.scss
+++ b/sass/layout/__gallery__modals.scss
@@ -1,6 +1,3 @@
-// .contact__modal {
-// 	//display: none;
-// }
 .modal {
 	display: none;
 	&__bground {
@@ -24,43 +21,52 @@
 		right: 0px;
 		margin-top: 30px;
 		margin-bottom: 30px;
-		margin-left: 30%;
-		margin-right: 30%;
-		//height: auto;
-		//background: #232323;
+		margin-left: 37%;
+		margin-right: 37%;
 		border-radius: 10px;
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: flex-start;
-
-		//border: 1px solid green;
-
-		font-size: 1.5rem;
-
-		//opacity: 0;
-		//transform: scaleY(1);
+		font-size: 1.8rem;
 		transform-origin: 0% -100%;
 		animation: apparition 0.6s forwards;
+		padding: $marginV;
 
 		&__head {
 			display: flex;
 			width: 100%;
 			justify-content: space-between;
-			//border: 1px solid blue;
+			align-items: center;
+			//margin-top: -20px;
 		}
-		&__name {
-			//border: 1px solid red;
+		// &__name {
+		// //	width: 100%;
+		// }
+
+		&__fields {
+			margin-top: 0.5 * $marginV;
+			color: $colour-grey;
+			font-size: 1.3rem;
 			width: 100%;
 		}
 	}
 }
 
+input {
+	font-size: $input-fontsize;
+	margin-bottom: 5px;
+}
 #message {
-	height: 200px;
+	height: 280px;
+
+	font-size: $input-fontsize;
+	width: 100%;
+	padding: 0;
+	margin: 0;
 }
 
-///////////////////////////////lightBox modal
+///////////////////////////////lightBox modal/////////////////////////////////////
 .lightboxBtn {
 	position: absolute;
 	margin: $lightbox-btn-margin;
@@ -89,7 +95,7 @@
 	color: $colour-primary;
 	display: none;
 	&__bground {
-		animation: lightbox-modal-background-opacity 0.6s forwards;
+		animation: lightbox-modal-background-opacity 0.4s forwards ease-out;
 		//opacity: 0;
 		background-color: white;
 	}
