--- a/sass/utils/boutons.scss
+++ b/sass/utils/boutons.scss
@@ -1,4 +1,5 @@
-button {
+button //for tag buttons
+{
 	border-radius: 11px;
 	margin-right: 5px;
 	border: 1px solid $colour-light-grey;
@@ -23,13 +24,22 @@ button {
 	cursor: pointer;
 }
 .gallery__main__presentation__btn {
-	@include colorway-white-on-red;
-	border-radius: $radius-small;
-
-	border: none;
-	height: 50px;
+	@include gallery-buttons;
 	&:hover {
 		@include colorway-black-on-salmon;
 		border: none;
 	}
+}
+
+.btn-submit {
+	@include gallery-buttons;
+	font-size: 1rem;
+	padding: 0px 50px;
+	margin-top: $marginH;
+}
+
+#btnClose {
+	//contactmodal
+	color: white;
+	font-size: 2rem;
 }
