--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'layout/header';
 @import 'layout/__articles.scss';
 @import 'layout/__gallery.scss';
+@import 'layout/__combobox.scss';
 
 @import 'layout/__gallery__modals.scss';
 @import 'utils/boutons.scss';
