--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -29,3 +29,9 @@ $lighbox-height: 900px;
 $photographer-avatar-dims: 180px;
 
 $input-fontsize: 1.2rem;
+
+$label-width: 80px;
+
+$select-radius: 5px;
+$option-width: 150px;
+$option-height: 30px;
