--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,22 +255,36 @@ li {
   margin-left: 30px;
 }
 
+.custom-select select {
+  display: none;
+  /*hide original SELECT element:*/
+}
+
 /*the container must be positioned relative:*/
 .custom-select {
   position: relative;
-  font-family: Arial;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
 }
 
-.select-selected {
-  background-color: DodgerBlue;
+.custom-select div {
+  background-color: #901c1c;
+  width: 100px;
+  height: 30px;
+}
+
+label {
+  width: 65px;
+  margin-right: 15px;
 }
 
 /*style the arrow inside the select element:*/
 .select-selected:after {
-  position: absolute;
+  position: relative;
   content: "";
-  top: 14px;
-  right: 10px;
+  top: 15px;
+  left: 15px;
   width: 0;
   height: 0;
   border: 6px solid transparent;
@@ -280,7 +294,9 @@ li {
 /*point the arrow upwards when the select box is open (active):*/
 .select-selected.select-arrow-active:after {
   border-color: transparent transparent #fff transparent;
-  top: 7px;
+  position: relative;
+  top: -15px;
+  left: 15px;
 }
 
 /*style the items (options), including the selected item:*/
@@ -299,9 +315,8 @@ li {
   position: absolute;
   background-color: DodgerBlue;
   top: 100%;
-  left: 0;
-  right: 0;
   z-index: 99;
+  margin-left: 80px;
 }
 
 /*hide the items when the select box is closed:*/
