--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,6 +274,11 @@ li {
   height: 30px;
 }
 
+.select-selected {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
 label {
   width: 65px;
   margin-right: 15px;
@@ -281,10 +286,10 @@ label {
 
 /*style the arrow inside the select element:*/
 .select-selected:after {
-  position: relative;
+  position: absolute;
+  top: 18px;
+  left: 185px;
   content: "";
-  top: 15px;
-  left: 15px;
   width: 0;
   height: 0;
   border: 6px solid transparent;
@@ -294,9 +299,9 @@ label {
 /*point the arrow upwards when the select box is open (active):*/
 .select-selected.select-arrow-active:after {
   border-color: transparent transparent #fff transparent;
-  position: relative;
-  top: -15px;
-  left: 15px;
+  position: absolute;
+  top: 15px;
+  left: 185px;
 }
 
 /*style the items (options), including the selected item:*/
@@ -319,13 +324,14 @@ label {
   margin-left: 80px;
 }
 
+.last {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 /*hide the items when the select box is closed:*/
 .select-hide {
   display: none;
-}
-
-.select-items div:hover {
-  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .same-as-selected {
