--- a/sass/layout/__combobox.scss
+++ b/sass/layout/__combobox.scss
@@ -58,7 +58,7 @@ label {
 	color: #ffffff;
 	padding: 8px 16px;
 	border: 1px solid transparent;
-	border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+	//border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
 	cursor: pointer;
 	user-select: none;
 }
@@ -82,9 +82,22 @@ label {
 	display: none;
 }
 
-// .select-items div:hover {
-// 	background-color: rgba(0, 0, 0, 0.1);
-// }
+.select-items div:hover {
+	background-color: $darken-primary;
+}
 .same-as-selected {
 	display: none;
+}
+.select-items div {
+	position: relative;
+}
+
+.select-items div:after {
+	content: '';
+	background: white;
+	position: absolute;
+	top: -1px;
+	left: 10%;
+	width: 80%;
+	height: 2px;
 }
