avant travail accessibilite

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,9 +11,9 @@ main {
 	flex-wrap: wrap;
 	justify-content: center;
 }
-h1 {
-	width: 100%;
-	display: flex;
-	justify-content: flex-end;
-	color: $colour-primary;
-}
+// h1 {
+// 	width: 100%;
+// 	display: flex;
+// 	justify-content: flex-end;
+// 	color: $colour-primary;
+// }
