--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,11 +1,13 @@
 /*Couleurs*/
 $colour-primary: #901c1c;
 $colour-secondary: #db8876;
+//$colour-secondary: darkblue;
 $colour-tertiary: #d3573c;
 $colour-grey: #525252;
 $colour-light-grey: #c4c4c4;
 $colour-white: #fff;
 $colour-black: #000000;
+//$colour-black: white;
 $darken-primary: darken($colour-primary, 5%);
 
 /*valeurs de marges les plus utilisées*/
