--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -49,6 +49,11 @@
 				justify-content: space-between;
 				margin: $margindefault;
 				font-size: 1.2rem;
+				&__title {
+					font-size: inherit;
+					font-weight: normal;
+					margin: 0;
+				}
 
 				&__likes {
 					display: flex;
@@ -57,6 +62,9 @@
 					}
 					&__heart {
 						cursor: pointer;
+						border-radius: 0px;
+						border: none;
+						font-size: 1.2rem;
 					}
 				}
 			}
