--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,6 +233,12 @@ li {
   border: none;
   font-size: 1.2rem;
 }
+.gallery__main__gallery__container__info__likes__heart:hover {
+  background-color: none;
+  color: #901c1c;
+  background: #fff;
+  border: none;
+}
 
 .bottom {
   color: #000000;
