--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -65,6 +65,11 @@
 						border-radius: 0px;
 						border: none;
 						font-size: 1.2rem;
+						&:hover {
+							background-color: none;
+							@include colorway-red-on-white;
+							border: none;
+						}
 					}
 				}
 			}
