--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,7 +1,35 @@
-@mixin mobile {
+@mixin mobile-420 {
+	@media screen and (max-width: 450px) {
+		@content;
+	}
+}
+
+@mixin mobile-450 {
+	@media screen and (max-width: 450px) {
+		@content;
+	}
+}
+
+@mixin mobile-600 {
+	@media screen and (max-width: 600px) {
+		@content;
+	}
+}
+
+@mixin mobile-800 {
 	@media screen and (max-width: 800px) {
 		@content;
 	}
+}
+
+@mixin tablet-1200 {
+	@media screen and (max-width: 1200px) {
+		@content;
+	}
+}
+
+@mixin tablet-scale {
+	transform: scale(0.8);
 }
 
 @mixin desktop {
