--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -16,6 +16,7 @@ $marginV: 20px;
 $margindefault: $marginV $marginH $marginV $marginH;
 
 $gallery_container_dim: 400px;
+$gallery_container_dim_S: 250px;
 
 /*Radii*/
 $radius-small: 5px;
@@ -27,10 +28,11 @@ $modal-duration: 5s;
 $lightbox-btn-size: 20px;
 $lightbox-btn-margin: 50px 100px 100px 100px;
 $lightbox-width: 1050px;
-$lighbox-height: 900px;
+$lightbox-height: 900px;
 
-$photographer-avatar-dims-S: 200px;
-$photographer-avatar-dims-M: 180px;
+$photographer-avatar-dims-XS: 100px;
+$photographer-avatar-dims-S: 180px;
+$photographer-avatar-dims-M: 200px;
 $photographer-avatar-dims-L: 340px;
 
 $input-fontsize: 1.2rem;
