--- a/sass/layout/__gallery__modals.scss
+++ b/sass/layout/__gallery__modals.scss
@@ -16,11 +16,9 @@
 		overflow: hidden;
 		position: fixed;
 		top: 0px;
-		//bottom: 30px;
 		left: 0px;
 		right: 0px;
 		margin-top: 30px;
-		//margin-bottom: 30px;
 		margin-left: 37%;
 		margin-right: 37%;
 		border-radius: 10px;
@@ -32,6 +30,17 @@
 		transform-origin: 0% -100%;
 		animation: apparition 0.6s forwards;
 		padding: $marginV;
+		@include tablet-1200 {
+			//position: absolute;
+			top: 0px;
+			bottom: 0px;
+			left: 0px;
+			right: 0px;
+			margin: 0;
+			//width: 100%;
+			height: 100%;
+			border-radius: 0px;
+		}
 
 		&__head {
 			display: flex;
@@ -39,6 +48,9 @@
 			justify-content: space-between;
 			align-items: center;
 			//margin-top: -20px;
+			// @include tablet-1200 {
+			// 	width: auto;
+			// }
 		}
 		// &__name {
 		// //	width: 100%;
@@ -53,6 +65,14 @@
 			//width: auto;
 		}
 	}
+}
+
+label {
+	width: $label-width;
+	margin-right: $marginH;
+	// @include mobile-800 {
+	// 	display: none;
+	// }
 }
 
 input {
@@ -72,6 +92,9 @@ input {
 	width: 100%;
 	padding: 0;
 	//margin: 0;
+	@include tablet-1200 {
+		height: 180px;
+	}
 }
 
 ///////////////////////////////lightBox modal/////////////////////////////////////
@@ -86,6 +109,20 @@ input {
 	align-items: center;
 	overflow: visible;
 	//margin: $lightbox-side-padding;
+	@include tablet-1200 {
+		font-size: 1rem;
+		margin: 30px;
+	}
+
+	@include mobile-800 {
+		font-size: 1rem;
+		//margin: 10px;
+	}
+
+	@include mobile-500 {
+		//font-size: 1rem;
+		margin: 5px;
+	}
 }
 .prev {
 	left: 0px;
@@ -98,6 +135,19 @@ input {
 .close {
 	top: 0px;
 	right: 0px;
+	@include mobile-800 {
+		margin: 50px;
+	}
+
+	@include mobile-600 {
+		margin: 80px 30px 30px 30px;
+	}
+	@include mobile-500 {
+		margin: 90px 10px 10px 10px;
+	}
+	@include mobile-450 {
+		margin: 120px 10px 10px 10px;
+	}
 }
 .lightbox__modal {
 	color: $colour-primary;
@@ -117,20 +167,42 @@ input {
 		width: auto;
 		height: auto;
 		background-color: unset;
-
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		// @include tablet-1200 {
+		// 	width: 400px;
+		// 	height: 400px;
+		// }
+		// @include mobile-450 {
+		// 	width: 300px;
+		// 	height: 300px;
+		// }
 
 		&__mediaContainer {
 			width: $lightbox-width;
-			height: $lighbox-height;
+			height: $lightbox-height;
+			@include tablet-1200 {
+				width: 400px;
+				height: 400px;
+			}
+			@include mobile-450 {
+				width: 350px;
+				height: 350px;
+			}
+			@include mobile-420 {
+				width: 250px;
+				height: 250px;
+			}
 			&__media {
 				object-fit: contain;
 				width: 100%;
 				height: 100%;
 				max-width: $lightbox-width;
-				max-height: $lighbox-height;
+				max-height: $lightbox-height;
+				@include tablet-1200 {
+					object-fit: cover;
+				}
 			}
 		}
 	}
