--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -55,14 +55,14 @@
 
 	&__content {
 		display: flex;
-		margin-left: $marginH;
+		margin: $marginH;
 		align-items: center;
 		margin-top: -8px;
 		z-index: 1;
 		@include tablet-1200 {
 			flex-direction: column;
 			align-items: flex-start;
-			margin: 0px;
+			//margin: 0px;
 			padding: 0px;
 			width: 100%;
 			justify-content: space-between;
